[gd_scene load_steps=23 format=3 uid="uid://c04js872l70y"]

[ext_resource type="Script" uid="uid://cflc2bmio8f6l" path="res://minigames/slide_game/scripts/slide_game.gd" id="1_yehqo"]
[ext_resource type="PackedScene" uid="uid://jqagqcmkd2tt" path="res://minigames/slide_game/bar/Bar.tscn" id="2_86a4g"]
[ext_resource type="PackedScene" uid="uid://yagyfec31i3v" path="res://minigames/slide_game/Arrow.tscn" id="3_86a4g"]
[ext_resource type="FontFile" uid="uid://dqj5bawxrigkg" path="res://minigames/slide_game/assets/fonts/old-town/OldTown.ttf" id="4_domts"]
[ext_resource type="PackedScene" uid="uid://deav4dldfgplq" path="res://minigames/slide_game/Camera.tscn" id="5_8d0rk"]
[ext_resource type="Texture2D" uid="uid://e5xkju5ehap8" path="res://minigames/slide_game/assets/mug_progress_bar/mugbar_overlay.png" id="5_dwi0s"]
[ext_resource type="PackedScene" uid="uid://b5on0vkifi3lq" path="res://minigames/slide_game/Poster.tscn" id="5_utaqm"]
[ext_resource type="PackedScene" uid="uid://bfhaxlnkuyqjg" path="res://minigames/slide_game/assets/models/room.blend" id="6_86a4g"]
[ext_resource type="Texture2D" uid="uid://cm6ty7rovp15n" path="res://minigames/slide_game/assets/mug_progress_bar/mugbar_progress.png" id="6_873iv"]
[ext_resource type="PackedScene" uid="uid://cuqqqmsacubem" path="res://minigames/slide_game/assets/models/stool.tscn" id="8_8d0rk"]
[ext_resource type="PackedScene" uid="uid://bkuq45k230r13" path="res://minigames/slide_game/assets/models/lamp.tscn" id="8_domts"]
[ext_resource type="PackedScene" uid="uid://d0anrt8gok02q" path="res://minigames/slide_game/CowboyPath.tscn" id="10_utaqm"]

[sub_resource type="Animation" id="Animation_ie4rx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.0472, 0)]
}

[sub_resource type="Animation" id="Animation_4s55a"]
resource_name = "arrow"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.0472, 0), Vector3(0, -2.0944, 0), Vector3(0, -1.0472, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ie4rx"]
_data = {
&"RESET": SubResource("Animation_ie4rx"),
&"arrow": SubResource("Animation_4s55a")
}

[sub_resource type="Gradient" id="Gradient_3m63e"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.0327869, 0.180328, 0.827869)
colors = PackedColorArray(0.819608, 0, 0.270588, 1, 0, 0.539505, 0.440977, 1, 0.818929, 0, 0.271189, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_domts"]
gradient = SubResource("Gradient_3m63e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8d0rk"]
texture = SubResource("GradientTexture1D_domts")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3m63e"]
bg_color = Color(1, 1, 1, 0.768627)

[sub_resource type="LabelSettings" id="LabelSettings_3m63e"]
font_size = 66

[sub_resource type="Theme" id="Theme_8d0rk"]
default_font = ExtResource("4_domts")
default_font_size = 150

[sub_resource type="Environment" id="Environment_86a4g"]
tonemap_mode = 2
glow_intensity = 5.6
adjustment_enabled = true
adjustment_contrast = 1.1

[node name="Main" type="Node3D"]
script = ExtResource("1_yehqo")

[node name="Bar" parent="." instance=ExtResource("2_86a4g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.33414, -0.132149, 0)

[node name="Arrow" parent="." instance=ExtResource("3_86a4g")]
transform = Transform3D(0.0999994, 0, -0.173205, 0, 0.2, 0, 0.173205, 0, 0.0999994, 0.213227, 0.6, 0.0151288)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrow"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_ie4rx")
}
autoplay = "arrow"

[node name="CamAnchor1" type="Marker3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.570714, -0.821149, 0, 0.821149, 0.570714, 1, 2.49467e-08, -3.58936e-08, -0.61, 2.032, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PowerBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -199.0
offset_top = -53.0
offset_right = 370.0
offset_bottom = 33.0
grow_horizontal = 0
grow_vertical = 0
rotation = -1.57079
theme_override_styles/background = SubResource("StyleBoxTexture_8d0rk")
theme_override_styles/fill = SubResource("StyleBoxFlat_3m63e")
max_value = 20.0
step = 0.1
value = 5.6
show_percentage = false

[node name="Label" type="Label" parent="UI/PowerBar"]
layout_mode = 0
offset_left = 327.0
offset_top = -80.0021
offset_right = 568.0
offset_bottom = 10.9979
text = "POWER"
label_settings = SubResource("LabelSettings_3m63e")

[node name="CashLabel" type="Label" parent="UI"]
layout_mode = 1
offset_left = 29.0
offset_top = 20.0
offset_right = 105.0
offset_bottom = 83.0
theme = SubResource("Theme_8d0rk")
text = "Cash: $0"

[node name="lives_bar" type="TextureProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -540.0
offset_right = 540.0
grow_vertical = 0
value = 100.0
fill_mode = 3
texture_over = ExtResource("5_dwi0s")
texture_progress = ExtResource("6_873iv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Camera" parent="." instance=ExtResource("5_8d0rk")]
transform = Transform3D(-2.63545e-08, 0.570958, -0.82098, 2.49574e-08, 0.82098, 0.570958, 1, -5.44219e-09, -3.58862e-08, -0.610188, 2.03154, 6.97793e-16)

[node name="room" parent="." instance=ExtResource("6_86a4g")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 3.23193, -0.652913, 0.756762)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_86a4g")

[node name="MugSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.179521, 0.742794, 0.0107074)

[node name="TargetSpawns" type="Node3D" parent="."]

[node name="TargetSpawn" type="Marker3D" parent="TargetSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.61705, 0.469232, 0.0966802)

[node name="TargetSpawn2" type="Marker3D" parent="TargetSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.70612, 0.469232, 0.0966802)

[node name="TargetSpawn3" type="Marker3D" parent="TargetSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.55136, 0.469232, 0.0966802)

[node name="TargetSpawn4" type="Marker3D" parent="TargetSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.40124, 0.469232, 0.0966802)

[node name="CamAnchor3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 4.61705, 2.10903, 0.0966802)

[node name="Decorations" type="Node3D" parent="."]

[node name="Stools" type="Node3D" parent="Decorations"]

[node name="stool" parent="Decorations/Stools" instance=ExtResource("8_8d0rk")]
transform = Transform3D(0.989784, 0, 0.142577, 0, 1, 0, -0.142577, 0, 0.989784, 2.55201, -0.659545, 1.05249)

[node name="stool2" parent="Decorations/Stools" instance=ExtResource("8_8d0rk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.684, -0.659545, 1.05249)

[node name="stool3" parent="Decorations/Stools" instance=ExtResource("8_8d0rk")]
transform = Transform3D(0.976454, 0, -0.215724, 0, 1, 0, 0.215724, 0, 0.976454, 4.7149, -0.659545, 1.05249)

[node name="stool4" parent="Decorations/Stools" instance=ExtResource("8_8d0rk")]
transform = Transform3D(0.99633, 0, -0.0855908, 0, 1, 0, 0.0855908, 0, 0.99633, 1.44628, -0.659545, 1.05249)

[node name="Posters" type="Node3D" parent="Decorations"]

[node name="Poster" parent="Decorations/Posters" instance=ExtResource("5_utaqm")]
transform = Transform3D(0.997591, 0.0693733, 0, -0.0693733, 0.997591, 0, 0, 0, 1, 3.8247, 1.66175, -2.31427)

[node name="Poster5" parent="Decorations/Posters" instance=ExtResource("5_utaqm")]
transform = Transform3D(-4.37114e-08, 0, -1, -0.0558564, 0.998439, 2.44156e-09, 0.998439, 0.0558564, -4.36431e-08, 7.87933, 1.42897, 1.15617)

[node name="Lamps" type="Node3D" parent="Decorations"]

[node name="Lamp" parent="Decorations/Lamps" instance=ExtResource("8_domts")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.9, 1.68077)

[node name="OmniLight3D" type="OmniLight3D" parent="Decorations/Lamps/Lamp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.226886, 0)
light_color = Color(0.903825, 0.734796, 0.673432, 1)
light_energy = 2.0
omni_range = 6.997

[node name="Lamp2" parent="Decorations/Lamps" instance=ExtResource("8_domts")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.7235, 1.9, 1.68077)

[node name="OmniLight3D" type="OmniLight3D" parent="Decorations/Lamps/Lamp2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.226886, 0)
light_color = Color(0.903825, 0.734796, 0.673432, 1)
light_energy = 2.0
omni_range = 6.997

[node name="CowboyPaths" type="Node3D" parent="."]

[node name="CowboyPath" parent="CowboyPaths" instance=ExtResource("10_utaqm")]
